plugins {
    id 'org.springframework.boot' version '2.4.9' apply false
    id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
    id 'io.freefair.lombok' version '6.0.0-m2' apply false

}

allprojects {
    version = '1.1.4.BETA'
    group = 'de.adesso'
}

subprojects {
    apply plugin: 'java'

    repositories {
        repositories {
            mavenCentral()
            jcenter()
        }
    }

    compileJava {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    test {
        useJUnitPlatform()
    }
}

ext.springSubprojects = subprojects.findAll {
    it.name in ['budgeteer-web-interface', 'budgeteer-core']
}

ext.nonSpringSubprojects = subprojects - springSubprojects

configure(nonSpringSubprojects) {
    dependencies {
        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junit5_version
        testImplementation group: 'org.mockito', name: 'mockito-core', version: mockito_version
        testImplementation group: 'org.assertj', name: 'assertj-core', version: assertj_version
        testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junit5_version
    }
}
